@@ -625,6 +625,11 @@ Release 0.20.0 - Unreleased
     (HADOOP-5234) and NPE in handling KillTaskAction of a cleanup task (HADOOP-5235).
     (Amareshwari Sriramadasu via ddas)
 
+    HADOOP-5247. Introduces a broadcast of KillJobAction to all trackers when
+    a job finishes. This fixes a bunch of problems to do with NPE when a completed
+    job is not in memory and a tasktracker comes to the jobtracker with a status
+    report of a task belonging to that job. (Amar Kamat via ddas)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
